[package]
name = "todui"
version = "0.1.1"
edition = "2021"
authors = ["Daniel M. <dmh672@gmail.com>"]
description = "A CLI and TUI for your todos"
repository = "https://github.com/danimelchor/todui"
license = "MIT"

[dependencies]
tui = { package = "ratatui", version = "0.20.1" }
crossterm = "0.25"
chrono = "0.4.23"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
anyhow = "1.0.69"
itertools = "0.10.5"
unicode-width = "0.1.10"
clap = { version = "4.1.8", features = ["derive"] }
open = "4.0.0"
dirs = "4.0.0"
